--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Researcher
-url: "http://ankitsultana.com"
+title: introduction of Makinori Ikegami (Temporary)
+url: "https://makinori.github.io/"
 baseurl: "/"
 
 markdown: kramdown
