Fix config of URL of this page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: introduction of Makinori Ikegami (Temporary)
-url: "https://makinori.github.io/"
+url: "https://i-makinori.github.io/"
 baseurl: "/"
 
 markdown: kramdown
